--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [lib]
 name = "lobbywebuipluginthing"
-crate-type = ["cdylib"]
+crate-type = ["lib","cdylib"]
 
 [dependencies]
 log = "0.4"
@@ -15,4 +15,3 @@ json = "0.12"
 [dependencies.samase_plugin]
 git = "https://github.com/neivv/samase_plugin"
 rev = "9a73bcccba8eb330371554065b5c559f1552bb3d"
-
